STEAM re-calced with less (more) than desirable RMSE. - May not be significant given the Steam is normally given in thouands (5-7) and the error is floating just above 50.

--- a/III Models/3 Model STEAM - FC55569/3 Feature Selection/1.0.6 XGB_contData_iter_reducedlist-2.ipynb
+++ b/III Models/3 Model STEAM - FC55569/3 Feature Selection/1.0.6 XGB_contData_iter_reducedlist-2.ipynb
@@ -23,7 +23,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_21520\\526159370.py:2: DeprecationWarning: \n",
+            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_12124\\526159370.py:2: DeprecationWarning: \n",
             "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
             "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
             "but was not found to be installed on your system.\n",
@@ -176,7 +176,13 @@
         "                    'TC55555',\n",
         "                    'FC55552',\n",
         "\n",
-        "                    'FFC55553' # Reiterating within this run, since it was the only one found.\n",
+        "                    'FFC55553', # Reiterating within this run, since it was the only one found.\n",
+        "\n",
+        "                    # Should have processed these out earlier, but was assuming some Butanol as an adjuster\n",
+        "                    # # FFC55555 is s better predicter according to the XGB-FS\n",
+        "                    'Butanol',\n",
+        "                    'TI55021',\n",
+        "                    'TI40050'\n",
         "                   ]\n",
         "\n",
         "# # Create a new DataFrame without the excluded columnsd\n",
@@ -192,8 +198,8 @@
           "data": {
             "text/plain": [
               "Index(['Date', '425_pct_Al', 'Al2O3', 'C4_pct_Eth', 'C4_pct_H2O', 'C4_pct_Hex',\n",
-              "       'Butanol', 'DI55102', 'DI55152', 'DI55580', 'FC55003', 'FC55569',\n",
-              "       'FC55576', 'FFC55555', 'LC90366', 'PI55020', 'TI40050', 'TI55021'],\n",
+              "       'DI55102', 'DI55152', 'DI55580', 'FC55003', 'FC55569', 'FC55576',\n",
+              "       'FFC55555', 'LC90366', 'PI55020'],\n",
               "      dtype='object')"
             ]
           },
@@ -283,32 +289,32 @@
           "output_type": "stream",
           "text": [
             "                                       Feature Rotation     Feature  \\\n",
-            "0     [425_pct_Al, FC55003, TI40050, DI55580, DI5515...  425_pct_Al   \n",
-            "1     [425_pct_Al, FC55003, TI40050, DI55580, DI5515...     FC55003   \n",
-            "2     [425_pct_Al, FC55003, TI40050, DI55580, DI5515...     TI40050   \n",
-            "3     [425_pct_Al, FC55003, TI40050, DI55580, DI5515...     DI55580   \n",
-            "4     [425_pct_Al, FC55003, TI40050, DI55580, DI5515...     DI55152   \n",
+            "0     [425_pct_Al, FC55003, DI55152, C4_pct_H2O, FC5...  425_pct_Al   \n",
+            "1     [425_pct_Al, FC55003, DI55152, C4_pct_H2O, FC5...     FC55003   \n",
+            "2     [425_pct_Al, FC55003, DI55152, C4_pct_H2O, FC5...     DI55152   \n",
+            "3     [425_pct_Al, FC55003, DI55152, C4_pct_H2O, FC5...  C4_pct_H2O   \n",
+            "4     [425_pct_Al, FC55003, DI55152, C4_pct_H2O, FC5...     FC55576   \n",
             "...                                                 ...         ...   \n",
-            "7675  [TI55021, DI55102, FFC55555, FC55003, LC90366,...  C4_pct_Hex   \n",
-            "7676  [TI55021, DI55102, FFC55555, FC55003, LC90366,...     DI55152   \n",
-            "7677  [TI55021, DI55102, FFC55555, FC55003, LC90366,...     Butanol   \n",
-            "7678  [TI55021, DI55102, FFC55555, FC55003, LC90366,...  C4_pct_H2O   \n",
-            "7679  [TI55021, DI55102, FFC55555, FC55003, LC90366,...     TI40050   \n",
+            "5065  [PI55020, C4_pct_H2O, FFC55555, C4_pct_Eth, FC...     FC55576   \n",
+            "5066  [PI55020, C4_pct_H2O, FFC55555, C4_pct_Eth, FC...     LC90366   \n",
+            "5067  [PI55020, C4_pct_H2O, FFC55555, C4_pct_Eth, FC...     DI55152   \n",
+            "5068  [PI55020, C4_pct_H2O, FFC55555, C4_pct_Eth, FC...  C4_pct_Hex   \n",
+            "5069  [PI55020, C4_pct_H2O, FFC55555, C4_pct_Eth, FC...     DI55580   \n",
             "\n",
             "      Importance  \n",
-            "0          512.0  \n",
-            "1          389.0  \n",
-            "2          311.0  \n",
-            "3          373.0  \n",
-            "4          344.0  \n",
+            "0          603.0  \n",
+            "1          467.0  \n",
+            "2          497.0  \n",
+            "3          468.0  \n",
+            "4          540.0  \n",
             "...          ...  \n",
-            "7675       303.0  \n",
-            "7676       306.0  \n",
-            "7677       268.0  \n",
-            "7678       313.0  \n",
-            "7679       225.0  \n",
+            "5065       511.0  \n",
+            "5066       319.0  \n",
+            "5067       403.0  \n",
+            "5068       359.0  \n",
+            "5069       381.0  \n",
             "\n",
-            "[7680 rows x 3 columns]\n"
+            "[5070 rows x 3 columns]\n"
           ]
         }
       ],
@@ -349,30 +355,27 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "       Feature  Average Importance                Description\n",
-            "0      FC55576          481.945833   CONDENSATE TO DESUPERHTR\n",
-            "1        Al2O3          376.275000                        NaN\n",
-            "2   C4_pct_Eth          368.308333                        NaN\n",
-            "3      DI55102          360.912500           HYDROL RX OUTLET\n",
-            "4   C4_pct_H2O          360.414583                        NaN\n",
-            "5      DI55580          356.568750   DA-554 BTMS SLURRY TO EX\n",
-            "6      DI55152          346.106250     2ND STG SEPR TO FA-560\n",
-            "7      PI55020          346.091667        DA-554 TOP PRESSURE\n",
-            "8   C4_pct_Hex          339.902083                        NaN\n",
-            "9   425_pct_Al          330.843750                        NaN\n",
-            "10     FC55003          317.568750   DA-551 O/H H2O TO DC-551\n",
-            "11     LC90366          308.106250         FB-657 SAO STORAGE\n",
-            "12    FFC55555          304.054167   RECYC BUT/ALKOX FD RATIO\n",
-            "13     Butanol          301.279167                        NaN\n",
-            "14     TI55021          297.064583             STEAM TO DA554\n",
-            "15     TI40050          278.558333  CLARK AIR COMP INLET TEMP\n"
+            "       Feature  Average Importance               Description\n",
+            "0      FC55576          552.607692  CONDENSATE TO DESUPERHTR\n",
+            "1      DI55102          475.830769          HYDROL RX OUTLET\n",
+            "2        Al2O3          460.097436                       NaN\n",
+            "3      DI55152          451.684615    2ND STG SEPR TO FA-560\n",
+            "4   C4_pct_H2O          450.166667                       NaN\n",
+            "5   C4_pct_Eth          446.761538                       NaN\n",
+            "6      DI55580          439.533333  DA-554 BTMS SLURRY TO EX\n",
+            "7   C4_pct_Hex          420.520513                       NaN\n",
+            "8      FC55003          413.443590  DA-551 O/H H2O TO DC-551\n",
+            "9      PI55020          395.361538       DA-554 TOP PRESSURE\n",
+            "10  425_pct_Al          391.994872                       NaN\n",
+            "11     LC90366          366.525641        FB-657 SAO STORAGE\n",
+            "12    FFC55555          334.471795  RECYC BUT/ALKOX FD RATIO\n"
           ]
         },
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_21520\\3091506829.py:9: SettingWithCopyWarning: \n",
+            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_12124\\3091506829.py:9: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame\n",
             "\n",
             "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -406,7 +409,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "2024-05-05 21:25:00.218115\n"
+            "2024-05-06 01:20:17.639372\n"
           ]
         }
       ],
