--- a/III Models/3 Model STEAM - FC55569/4 Model Selection/1.1.1 OLS_contData.ipynb
+++ b/III Models/3 Model STEAM - FC55569/4 Model Selection/1.1.1 OLS_contData.ipynb
@@ -12,7 +12,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_19388\\3619633928.py:2: DeprecationWarning: \n",
+            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_40668\\3619633928.py:2: DeprecationWarning: \n",
             "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
             "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
             "but was not found to be installed on your system.\n",
@@ -218,7 +218,13 @@
         "                    'TC55555',\n",
         "                    'FC55552',\n",
         "\n",
-        "                    'FFC55553'\n",
+        "                    'FFC55553', # Reiterating within this run, since it was the only one found.\n",
+        "\n",
+        "                    # Should have processed these out earlier, but was assuming some Butanol as an adjuster\n",
+        "                    # # FFC55555 is s better predicter according to the XGB-FS\n",
+        "                    'Butanol',\n",
+        "                    'TI55021',\n",
+        "                    'TI40050'\n",
         "\n",
         "#                  'Date',\n",
         "#                  'C4_pct_Hex', 'HydWtr_Na2O',\n",
@@ -251,8 +257,8 @@
           "data": {
             "text/plain": [
               "Index(['425_pct_Al', 'Al2O3', 'C4_pct_Eth', 'C4_pct_H2O', 'C4_pct_Hex',\n",
-              "       'Butanol', 'DI55102', 'DI55152', 'DI55580', 'FC55003', 'FC55569',\n",
-              "       'FC55576', 'FFC55555', 'LC90366', 'PI55020', 'TI40050', 'TI55021'],\n",
+              "       'DI55102', 'DI55152', 'DI55580', 'FC55003', 'FC55569', 'FC55576',\n",
+              "       'FFC55555', 'LC90366', 'PI55020'],\n",
               "      dtype='object')"
             ]
           },
@@ -290,43 +296,40 @@
             "=======================================================================================\n",
             "Dep. Variable:                FC55569   R-squared (uncentered):                   0.998\n",
             "Model:                            OLS   Adj. R-squared (uncentered):              0.998\n",
-            "Method:                 Least Squares   F-statistic:                          1.492e+06\n",
-            "Date:                Sun, 05 May 2024   Prob (F-statistic):                        0.00\n",
-            "Time:                        22:24:41   Log-Likelihood:                     -2.8170e+05\n",
-            "No. Observations:               40127   AIC:                                  5.634e+05\n",
-            "Df Residuals:                   40111   BIC:                                  5.636e+05\n",
-            "Df Model:                          16                                                  \n",
+            "Method:                 Least Squares   F-statistic:                          1.824e+06\n",
+            "Date:                Mon, 06 May 2024   Prob (F-statistic):                        0.00\n",
+            "Time:                        01:30:18   Log-Likelihood:                     -2.8183e+05\n",
+            "No. Observations:               40127   AIC:                                  5.637e+05\n",
+            "Df Residuals:                   40114   BIC:                                  5.638e+05\n",
+            "Df Model:                          13                                                  \n",
             "Covariance Type:            nonrobust                                                  \n",
             "==============================================================================\n",
             "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
             "------------------------------------------------------------------------------\n",
-            "425_pct_Al   159.6694      5.615     28.436      0.000     148.664     170.675\n",
-            "Al2O3       -153.2487      3.381    -45.333      0.000    -159.875    -146.623\n",
-            "C4_pct_Eth   220.7319      2.515     87.782      0.000     215.803     225.660\n",
-            "C4_pct_H2O    55.3877      0.654     84.700      0.000      54.106      56.669\n",
-            "C4_pct_Hex  -175.1386      6.225    -28.137      0.000    -187.339    -162.938\n",
-            "Butanol       -0.9863      0.166     -5.950      0.000      -1.311      -0.661\n",
-            "DI55102     -262.0755     33.091     -7.920      0.000    -326.935    -197.216\n",
-            "DI55152     6265.8069     66.166     94.699      0.000    6136.121    6395.493\n",
-            "DI55580    -1065.6496     33.776    -31.551      0.000   -1131.850    -999.449\n",
-            "FC55003        0.1446      0.002     70.300      0.000       0.141       0.149\n",
-            "FC55576       -0.5487      0.006    -88.241      0.000      -0.561      -0.536\n",
-            "FFC55555    1476.0195     57.062     25.867      0.000    1364.177    1587.862\n",
-            "LC90366       -0.8331      0.052    -16.072      0.000      -0.935      -0.731\n",
-            "PI55020      -49.1968      1.403    -35.064      0.000     -51.947     -46.447\n",
-            "TI40050        0.8101      0.110      7.350      0.000       0.594       1.026\n",
-            "TI55021       -1.8664      0.153    -12.163      0.000      -2.167      -1.566\n",
+            "425_pct_Al   139.0198      5.457     25.474      0.000     128.323     149.716\n",
+            "Al2O3       -174.8790      3.060    -57.142      0.000    -180.877    -168.881\n",
+            "C4_pct_Eth   226.5399      2.494     90.832      0.000     221.652     231.428\n",
+            "C4_pct_H2O    56.1497      0.631     89.052      0.000      54.914      57.386\n",
+            "C4_pct_Hex  -162.1619      6.074    -26.697      0.000    -174.067    -150.256\n",
+            "DI55102     -298.3220     32.774     -9.102      0.000    -362.560    -234.084\n",
+            "DI55152     6335.2884     61.130    103.637      0.000    6215.473    6455.104\n",
+            "DI55580    -1100.0197     33.030    -33.303      0.000   -1164.760   -1035.280\n",
+            "FC55003        0.1441      0.002     71.780      0.000       0.140       0.148\n",
+            "FC55576       -0.5594      0.006    -91.955      0.000      -0.571      -0.547\n",
+            "FFC55555    1456.7668     54.707     26.629      0.000    1349.541    1563.993\n",
+            "LC90366       -0.8621      0.052    -16.687      0.000      -0.963      -0.761\n",
+            "PI55020      -51.4484      1.359    -37.855      0.000     -54.112     -48.785\n",
             "==============================================================================\n",
-            "Omnibus:                     2422.998   Durbin-Watson:                   0.007\n",
-            "Prob(Omnibus):                  0.000   Jarque-Bera (JB):             9794.571\n",
-            "Skew:                           0.156   Prob(JB):                         0.00\n",
-            "Kurtosis:                       5.400   Cond. No.                     3.12e+05\n",
+            "Omnibus:                     2148.995   Durbin-Watson:                   0.007\n",
+            "Prob(Omnibus):                  0.000   Jarque-Bera (JB):             8546.652\n",
+            "Skew:                           0.066   Prob(JB):                         0.00\n",
+            "Kurtosis:                       5.257   Cond. No.                     2.98e+05\n",
             "==============================================================================\n",
             "\n",
             "Notes:\n",
             "[1] R² is computed without centering (uncentered) since the model does not contain a constant.\n",
             "[2] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
-            "[3] The condition number is large, 3.12e+05. This might indicate that there are\n",
+            "[3] The condition number is large, 2.98e+05. This might indicate that there are\n",
             "strong multicollinearity or other numerical problems.\n"
           ]
         }
@@ -402,7 +405,7 @@
           "text": [
             "\n",
             "Significant Features:\n",
-            "['425_pct_Al', 'Al2O3', 'C4_pct_Eth', 'C4_pct_H2O', 'C4_pct_Hex', 'Butanol', 'DI55102', 'DI55152', 'DI55580', 'FC55003', 'FC55576', 'FFC55555', 'LC90366', 'PI55020', 'TI40050', 'TI55021']\n"
+            "['425_pct_Al', 'Al2O3', 'C4_pct_Eth', 'C4_pct_H2O', 'C4_pct_Hex', 'DI55102', 'DI55152', 'DI55580', 'FC55003', 'FC55576', 'FFC55555', 'LC90366', 'PI55020']\n"
           ]
         }
       ],
