--- a/III Models/3 Model STEAM - FC55569/5 Preprocessing - Slecected Features/Merge Data/1.1.1 IM - Create Dataset .ipynb
+++ b/III Models/3 Model STEAM - FC55569/5 Preprocessing - Slecected Features/Merge Data/1.1.1 IM - Create Dataset .ipynb
@@ -12,7 +12,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_39036\\1304120184.py:1: DeprecationWarning: \n",
+            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_41372\\1304120184.py:1: DeprecationWarning: \n",
             "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
             "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
             "but was not found to be installed on your system.\n",
@@ -79,53 +79,39 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "            DI55102       DI55152       DI55580       FC55003       FC55569  \\\n",
-            "count  54561.000000  54561.000000  54561.000000  54561.000000  54561.000000   \n",
-            "mean       0.943464      0.933740      0.999659   5997.874173   6619.660036   \n",
-            "std        0.054314      0.030442      0.049659    929.965928    459.648371   \n",
-            "min        0.800002      0.835069      0.848476    876.652000   3427.400000   \n",
-            "25%        0.909271      0.913437      0.967906   5468.260000   6359.960000   \n",
-            "50%        0.949199      0.933843      0.998969   6017.820000   6586.370000   \n",
-            "75%        0.984290      0.953282      1.034240   6578.150000   6834.760000   \n",
-            "max        1.062800      1.031740      1.144600  10609.000000  10171.500000   \n",
+            "            FC55569       DI55102       DI55152       DI55580       FC55003  \\\n",
+            "count  77594.000000  77594.000000  77594.000000  77594.000000  77594.000000   \n",
+            "mean    5389.718019      0.945994      0.941387      0.996512   4807.772506   \n",
+            "std     2563.532415      0.054850      0.037950      0.047092   2515.207321   \n",
+            "min        0.000000      0.800002      0.815008      0.849896      0.000000   \n",
+            "25%     6027.695000      0.910380      0.915287      0.966211   4487.017500   \n",
+            "50%     6478.325000      0.952368      0.938750      0.995583   5718.520000   \n",
+            "75%     6757.840000      0.987148      0.963072      1.027450   6403.305000   \n",
+            "max    10929.000000      1.109150      1.062590      1.141710  12551.000000   \n",
             "\n",
-            "            FC55576      FFC55555       LC90366       PI55020       TI40050  \\\n",
-            "count  54561.000000  54561.000000  54561.000000  54561.000000  54561.000000   \n",
-            "mean     368.304281      0.772163     45.988848     -1.442503     73.095826   \n",
-            "std      253.894618      0.024718     29.087032      1.147927     15.208337   \n",
-            "min        0.000000      0.213109      0.000000     -5.012500     27.533700   \n",
-            "25%      192.303000      0.758564     20.174500     -2.327720     62.597500   \n",
-            "50%      342.637000      0.773306     47.182900     -1.421400     76.299800   \n",
-            "75%      543.420000      0.788541     77.046100     -0.418453     84.557900   \n",
-            "max     1132.440000      0.998409     87.901600      2.236610    118.700000   \n",
-            "\n",
-            "            TI55021  \n",
-            "count  54561.000000  \n",
-            "mean     223.764506  \n",
-            "std       11.267038  \n",
-            "min      150.495000  \n",
-            "25%      217.452000  \n",
-            "50%      220.366000  \n",
-            "75%      224.428000  \n",
-            "max      298.351000  \n",
+            "            FC55576      FFC55555       LC90366       PI55020  \n",
+            "count  77594.000000  77594.000000  77594.000000  77594.000000  \n",
+            "mean     308.260840      0.621106     46.449943     -1.148808  \n",
+            "std      275.324727      0.306428     27.428171      1.183644  \n",
+            "min        0.000000      0.000000      0.000000     -4.843310  \n",
+            "25%        4.889997      0.736283     23.995300     -2.094020  \n",
+            "50%      295.045500      0.765027     48.925450     -0.891199  \n",
+            "75%      478.570500      0.781207     71.175200     -0.026370  \n",
+            "max     1132.440000      1.000000     87.901600      2.284740  \n",
             "         425_pct_Al         Al2O3    C4_pct_Eth    C4_pct_H2O    C4_pct_Hex\n",
-            "count  54561.000000  54561.000000  54561.000000  54561.000000  54561.000000\n",
-            "mean       6.156552     11.354136      1.252715     21.164006      0.458286\n",
-            "std        0.274426      0.591839      0.799271      2.771817      0.237698\n",
-            "min        4.815620      9.541520      0.009510      8.258290      0.000060\n",
-            "25%        6.009700     11.069600      0.630762     18.797400      0.338534\n",
-            "50%        6.148420     11.487300      1.134980     21.392100      0.437896\n",
-            "75%        6.306480     11.715900      1.693370     23.305300      0.538039\n",
-            "max        7.436160     12.880700     11.355000     34.605000      3.053900\n",
-            "            Butanol\n",
-            "count  54561.000000\n",
-            "mean       9.873995\n",
-            "std       10.573901\n",
-            "min        0.000000\n",
-            "25%        3.780000\n",
-            "50%        5.833330\n",
-            "75%       10.896700\n",
-            "max       61.840000\n"
+            "count  77594.000000  77594.000000  77594.000000  77594.000000  77594.000000\n",
+            "mean       6.121068     11.285237      1.267561     20.825432      0.450232\n",
+            "std        0.304759      0.601270      0.857875      2.847546      0.219917\n",
+            "min        4.323000      9.472910      0.009510      7.606320      0.000000\n",
+            "25%        5.986587     10.900550      0.646046     18.461425      0.330000\n",
+            "50%        6.130250     11.434400      1.177270     20.842750      0.429393\n",
+            "75%        6.275317     11.672700      1.644750     22.997900      0.529720\n",
+            "max        7.778290     12.886400     13.531200     34.362400      2.843050\n",
+            "                       Date\n",
+            "count                 77594\n",
+            "unique                77594\n",
+            "top     2012-05-09 00:00:00\n",
+            "freq                      1\n"
           ]
         }
       ],
@@ -197,10 +183,10 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Index(['Date', 'DI55102', 'DI55152', 'DI55580', 'FC55003', 'FC55569',\n",
-            "       'FC55576', 'FFC55555', 'LC90366', 'PI55020', 'TI40050', 'TI55021'],\n",
+            "Index(['Date', 'FC55569', 'DI55102', 'DI55152', 'DI55580', 'FC55003',\n",
+            "       'FC55576', 'FFC55555', 'LC90366', 'PI55020'],\n",
             "      dtype='object')\n",
-            "Index(['Date', 'Butanol'], dtype='object')\n",
+            "Index(['Date'], dtype='object')\n",
             "Index(['Date', '425_pct_Al', 'Al2O3', 'C4_pct_Eth', 'C4_pct_H2O',\n",
             "       'C4_pct_Hex'],\n",
             "      dtype='object')\n"
@@ -384,25 +370,25 @@
           "output_type": "stream",
           "text": [
             "                 Date  425_pct_Al     Al2O3  C4_pct_Eth  C4_pct_H2O  \\\n",
-            "0 2012-05-13 17:00:00    6.257800  11.85580    2.315660    21.58900   \n",
-            "1 2012-05-13 18:00:00    6.258150  11.87625    2.317015    21.59160   \n",
-            "2 2012-05-13 19:00:00    6.258850  11.91710    2.319730    21.59685   \n",
-            "3 2012-05-13 20:00:00    6.259555  11.95790    2.322445    21.60215   \n",
-            "4 2012-05-13 21:00:00    6.260260  11.99875    2.325160    21.60745   \n",
+            "0 2012-05-08 23:00:00    6.254940  12.14350    2.006150    20.98780   \n",
+            "1 2012-05-09 06:00:00    6.254725  12.10140    2.015650    21.00625   \n",
+            "2 2012-05-09 07:00:00    6.254475  12.05325    2.026510    21.02730   \n",
+            "3 2012-05-09 08:00:00    6.254410  12.04120    2.029225    21.03255   \n",
+            "4 2012-05-09 09:00:00    6.254350  12.02915    2.031940    21.03785   \n",
             "\n",
-            "   C4_pct_Hex    Butanol   DI55102   DI55152   DI55580      FC55003  \\\n",
-            "0    0.611370  57.958400  0.975939  0.949229  1.032360  6570.240000   \n",
-            "1    0.611707  57.958400  0.975939  0.949229  1.032360  6570.240000   \n",
-            "2    0.612382  57.958400  0.975939  0.949229  1.032360  6570.240000   \n",
-            "3    0.613056  54.875500  0.975904  0.948656  1.032043  6634.436667   \n",
-            "4    0.613730  51.792567  0.975875  0.948095  1.031655  6694.237500   \n",
+            "   C4_pct_Hex  FC55569   DI55102   DI55152   DI55580      FC55003   FC55576  \\\n",
+            "0    0.534483      0.0  0.835875  0.878343  0.871840  2062.630000  5.927110   \n",
+            "1    0.536844      0.0  0.857498  0.918667  0.938666  2208.816667  8.012427   \n",
+            "2    0.539542      0.0  0.857498  0.918667  0.938666  2208.816667  8.012427   \n",
+            "3    0.540216      0.0  0.857498  0.918667  0.938666  2208.816667  8.012427   \n",
+            "4    0.540890      0.0  0.863447  0.924006  0.945967  2222.720000  7.198467   \n",
             "\n",
-            "       FC55569    FC55576  FFC55555  LC90366   PI55020    TI40050     TI55021  \n",
-            "0  6465.030000  334.73200  0.748898  82.1746 -0.350805  83.248300  213.937000  \n",
-            "1  6465.030000  334.73200  0.748898  82.1746 -0.350805  83.248300  213.937000  \n",
-            "2  6465.030000  334.73200  0.748898  82.1746 -0.350805  83.248300  213.937000  \n",
-            "3  6465.943333  336.82900  0.749250  82.1746 -0.413804  81.575367  213.706333  \n",
-            "4  6466.167500  335.50075  0.749331  82.1746 -0.440142  80.006075  213.401250  \n"
+            "   FFC55555    LC90366   PI55020  \n",
+            "0       0.0  82.673400 -3.849210  \n",
+            "1       0.0  82.653467 -4.183727  \n",
+            "2       0.0  82.653467 -4.183727  \n",
+            "3       0.0  82.653467 -4.183727  \n",
+            "4       0.0  82.648475 -4.028230  \n"
           ]
         }
       ],
@@ -425,8 +411,8 @@
           "data": {
             "text/plain": [
               "Index(['Date', '425_pct_Al', 'Al2O3', 'C4_pct_Eth', 'C4_pct_H2O', 'C4_pct_Hex',\n",
-              "       'Butanol', 'DI55102', 'DI55152', 'DI55580', 'FC55003', 'FC55569',\n",
-              "       'FC55576', 'FFC55555', 'LC90366', 'PI55020', 'TI40050', 'TI55021'],\n",
+              "       'FC55569', 'DI55102', 'DI55152', 'DI55580', 'FC55003', 'FC55576',\n",
+              "       'FFC55555', 'LC90366', 'PI55020'],\n",
               "      dtype='object')"
             ]
           },
@@ -463,7 +449,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "2024-05-05 22:36:31.936015\n"
+            "2024-05-06 01:56:54.969883\n"
           ]
         }
       ],
