--- a/II Data/2 Preprocessing/Continuous Data/1.1.0 - RangeLimits.ipynb
+++ b/II Data/2 Preprocessing/Continuous Data/1.1.0 - RangeLimits.ipynb
@@ -2,12 +2,27 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 1,
       "metadata": {
         "tags": [],
         "trusted": true
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_13832\\3402816738.py:1: DeprecationWarning: \n",
+            "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+            "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+            "but was not found to be installed on your system.\n",
+            "If this would cause problems for you,\n",
+            "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+            "        \n",
+            "  import pandas as pd\n"
+          ]
+        }
+      ],
       "source": [
         "import pandas as pd\n",
         "# Set max columns to display\n",
@@ -18,7 +33,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -37,7 +52,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
@@ -55,7 +70,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 4,
       "metadata": {
         "trusted": true
       },
@@ -738,7 +753,7 @@
               "max      695.788000     40.67650  "
             ]
           },
-          "execution_count": 17,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -755,7 +770,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
@@ -975,7 +990,7 @@
               "1      100      200        11  "
             ]
           },
-          "execution_count": 18,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -989,7 +1004,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1016,7 +1031,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
@@ -1056,7 +1071,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
@@ -1145,7 +1160,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
@@ -1238,7 +1253,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1257,7 +1272,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [
         {
@@ -1938,7 +1953,7 @@
               "max      243.012000     10.998900  "
             ]
           },
-          "execution_count": 24,
+          "execution_count": 11,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1950,7 +1965,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1959,14 +1974,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "2024-03-09 21:37:58.535502\n"
+            "2024-05-06 20:09:59.848458\n"
           ]
         }
       ],
